Added research portfolio PDF and updated project section

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             </div>
             <div class="profile-info">
                 <h2>About Me</h2>
-                <p id="intro">Hi, I’m Kohan, a data analyst, policy researcher, and curious thinker with a passion for turning complex questions into actionable insights. I’m currently pursuing my Master of Public Policy at the University of Chicago, specializing in Data Analytics, Finance, and Policy, after earning my undergraduate degree in Economics from Columbia University.</p>
-                <p>My work lives at the intersection of data, decision-making, and impact. I’ve built tools to forecast financial market dynamics, analyzed innovation trends in clean technology, and explored healthcare and education disparities across U.S. communities. Whether I’m writing machine learning models in Python, designing dashboards in R Shiny, or conducting regression analysis in Stata, my goal is always the same: to tell clear, honest stories with data that can move policy or markets.</p>
-                <p>What drives me most is curiosity. I love peeling back the layers of how systems work — from hydrogen supply chains to public insurance coverage — and asking what the data isn’t saying yet. I also care deeply about bridging the gap between quantitative analysis and human impact, and I’m excited by roles where I can apply both rigor and empathy to solve meaningful problems.</p>
+                <p id="intro">Hi, I'm Kohan, a data analyst, policy researcher, and curious thinker with a passion for turning complex questions into actionable insights. I'm currently pursuing my Master of Public Policy at the University of Chicago, specializing in Data Analytics, Finance, and Policy, after earning my undergraduate degree in Economics from Columbia University.</p>
+                <p>My work lives at the intersection of data, decision-making, and impact. I've built tools to forecast financial market dynamics, analyzed innovation trends in clean technology, and explored healthcare and education disparities across U.S. communities. Whether I'm writing machine learning models in Python, designing dashboards in R Shiny, or conducting regression analysis in Stata, my goal is always the same: to tell clear, honest stories with data that can move policy or markets.</p>
+                <p>What drives me most is curiosity. I love peeling back the layers of how systems work — from hydrogen supply chains to public insurance coverage — and asking what the data isn't saying yet. I also care deeply about bridging the gap between quantitative analysis and human impact, and I'm excited by roles where I can apply both rigor and empathy to solve meaningful problems.</p>
             </div>
         </div>
 
@@ -46,16 +46,23 @@
         <section class="projects-section">
             <h2>Featured Projects</h2>
             <div class="projects-container">
-                <div class="project-item">
-                    <h3>HHS OIG Healthcare Enforcement Actions Dashboard</h3>
-                    <p class="project-description">An interactive dashboard tracking healthcare enforcement actions across the United States.</p>
-                    <a href="https://remarkable-bunny-597e0e.netlify.app" target="_blank" class="project-link">View Live Demo</a>
-                </div>
 
                 <div class="project-item">
                     <h3>Roth 401k vs Self-Managed Investment Comparison</h3>
                     <p class="project-description">An interactive tool to compare long-term returns between Roth 401k and self-managed investment strategies.</p>
                     <a href="https://roth401-or-self-invest.streamlit.app/?user_id=9be41e85-1720-43d4-bae1-ce1d3522fc24" target="_blank" class="project-link">Access Tool</a>
+                </div>
+
+                <div class="project-item">
+                    <h3>Chicago Health Insurance Coverage Analysis</h3>
+                    <p class="project-description">This interactive dashboard explores health insurance coverage patterns across Chicago's census tracts, examining relationships between uninsured rates and socioeconomic factors.</p>
+                    <a href="https://kohanchen.shinyapps.io/final-project-Kohaningithub/" target="_blank" class="project-link">View Dashboard</a>
+                </div>
+
+                <div class="project-item">
+                    <h3>Tableau Dashboard: Hydrogen Fuel Cell Patent for Transportation Dashboard (1990 - 2020)</h3>
+                    <p class="project-description">This project explores global innovation trends in hydrogen fuel cell transportation patents from 1990 to 2020.</p>
+                    <a href="https://public.tableau.com/app/profile/kohan.chen/viz/PatentsHydrogenTransportation/Dashboard1?publish=yes" target="_blank" class="project-link">View Dashboard</a>
                 </div>
 
                 <div class="project-item">
@@ -71,15 +78,29 @@
                 </div>
 
                 <div class="project-item">
-                    <h3>Chicago Health Insurance Coverage Analysis</h3>
-                    <p class="project-description">This interactive dashboard explores health insurance coverage patterns across Chicago's census tracts, examining relationships between uninsured rates and socioeconomic factors.</p>
-                    <a href="https://kohanchen.shinyapps.io/final-project-Kohaningithub/" target="_blank" class="project-link">View Dashboard</a>
+                    <h3>HHS OIG Healthcare Enforcement Actions Dashboard</h3>
+                    <p class="project-description">An interactive dashboard tracking healthcare enforcement actions across the United States.</p>
+                    <a href="https://remarkable-bunny-597e0e.netlify.app" target="_blank" class="project-link">View Live Demo</a>
                 </div>
+            </div>
+        </section>
 
-                <div class="project-item">
-                    <h3>Hydrogen Fuel Cell Patent for Transportation Dashboard (1990 - 2020)</h3>
-                    <p class="project-description">This project explores global innovation trends in hydrogen fuel cell transportation patents from 1990 to 2020.</p>
-                    <a href="https://public.tableau.com/app/profile/kohan.chen/viz/PatentsHydrogenTransportation/Dashboard1?publish=yes" target="_blank" class="project-link">View Dashboard</a>
+        <section class="research-section section-box">
+            <h2>Research Paper</h2>
+            <div class="research-container">
+                <div class="research-item">
+                    <h3>Machine Learning Analysis of Stablecoin Behavior During Market Stress</h3>
+                    <p class="research-abstract">
+                        Analysis of stablecoin behavior during the Terra/Luna collapse (May 2022), examining over 70M transactions across USDT, USDC, DAI, USTC, and PAX. The study reveals key differences between algorithmic and collateralized approaches under extreme market conditions.
+                    </p>
+                    <div class="methods-used">
+                        <strong>Methods Used:</strong> 
+                        <span>Decision Trees</span>, 
+                        <span>Random Forests</span>, 
+                        <span>Clustering Analysis</span>, 
+                        <span>LASSO/Ridge Regression</span>
+                    </div>
+                    <a href="writeup.pdf" class="project-link" target="_blank">View Full Paper →</a>
                 </div>
             </div>
         </section>
