Improved technical session phrasing

--- a/index.html
+++ b/index.html
@@ -26,19 +26,34 @@
         </div>
 
         <section class="skills-section">
-            <h2>My Skills</h2>
+            <h2>Technical Expertise</h2>
             <div class="skills-container">
                 <div class="skill-item">
                     <h3>Data Analysis & Programming</h3>
-                    <p class="skill-description">Proficient in R, Python, SQL, and JavaScript. I enjoy working with data visualization tools like ggplot, matplotlib, and Tableau to create insightful visualizations.</p>
+                    <ul class="skill-list">
+                        <li>Advanced: R, Python, SQL, JavaScript</li>
+                        <li>Data pipelines & ETL processes</li>
+                        <li>Data visualization: Tableau, ggplot, D3.js</li>
+                        <li>Interactive dashboard development</li>
+                    </ul>
                 </div>
                 <div class="skill-item">
-                    <h3>Statistical Methods</h3>
-                    <p class="skill-description">Experienced in econometrics, machine learning, and statistical modeling. I've implemented various models including GLS regression, Random Forests, PCA, Clustering, and LASSO/Ridge for data analysis.</p>
+                    <h3>Statistical Methods & Modeling</h3>
+                    <ul class="skill-list">
+                        <li>Econometrics & regression analysis</li>
+                        <li>Machine learning: Random Forests, PCA</li>
+                        <li>Regularization techniques (LASSO/Ridge)</li>
+                        <li>Time series analysis & forecasting</li>
+                    </ul>
                 </div>
                 <div class="skill-item">
                     <h3>Research & Analysis</h3>
-                    <p id="design-skill">I have a strong background in economic research and policy analysis. My work includes market analysis, competitive dynamics evaluation, and developing data-driven insights for strategic decision-making.</p>
+                    <ul class="skill-list">
+                        <li>Economic research & policy analysis</li>
+                        <li>Market analysis & competitive dynamics</li>
+                        <li>Data-driven strategic frameworks</li>
+                        <li>Research design & methodology</li>
+                    </ul>
                 </div>
             </div>
         </section>
